samples/_failures_safe/1761695017_cf9faa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95d46379.c: In function ‘main’:
./samples/SAFE/__tmp_95d46379.c:126:16: error: missing terminating " character
  126 |         printf("\nMatrix dimensions
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_95d46379.c:126:9: error: expected expression at end of input
  126 |         printf("\nMatrix dimensions
      |         ^~~~~~
./samples/SAFE/__tmp_95d46379.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_95d46379.c:126:9: error: expected declaration or statement at end of input
